fix(icons-alignment): Fixed an alignment issue on the model details

--- a/src/style/layout/_tree.scss
+++ b/src/style/layout/_tree.scss
@@ -248,13 +248,11 @@ ul.favourites li:focus {
   small {
   margin-right: 16px;
   font-size: 90%;
-    > span {
-      margin-left: 4px;
-    }
     i {
       font-size: 17px;
-      width: 18px;
+      width: 20px;
       text-align: center;
+      margin-right: 8px;
     }
   }
 }
